--- a/src/components/Navigation/Navigation.module.css
+++ b/src/components/Navigation/Navigation.module.css
@@ -5,7 +5,7 @@
 
 .link {
     text-decoration: none;
-    color: darkslategrey;
+    color: rgb(14, 47, 104);
     font-size: 26px;
 }
 .link:hover {
