--- a/src/components/App/App.module.css
+++ b/src/components/App/App.module.css
@@ -15,7 +15,7 @@ h1 {
 }
 
 button {
-    padding: 10px 20px;
+    /* padding: 10px 20px; */
     font-size: 1rem;
 
     background-color: #007bff;
@@ -23,6 +23,7 @@ button {
     border-radius: 4px;
     cursor: pointer;
     margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 button:hover {
