--- a/src/components/Contact/Contact.module.css
+++ b/src/components/Contact/Contact.module.css
@@ -1,3 +1,7 @@
+li {
+    list-style: none;
+}
+
 .liItem {
     border: 1px solid #d0d0d0;
     border-radius: 20px;
@@ -8,14 +12,9 @@
     align-items: center;
     gap: 12px;
 }
-.deleteButton {
-    padding-left: 12px;
-
-    background-color: grey;
-    color: white;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
+.button {
+    margin-bottom: 10px;
+    background-color: rgb(84, 127, 180);
 }
 
 .deleteButton:hover {
