--- a/src/components/UserMenu/UserMenu.module.css
+++ b/src/components/UserMenu/UserMenu.module.css
@@ -9,17 +9,28 @@
     font-size: 20px;
     color: #084390;
 }
-.btn {
-    /* border: 1px solid #fff; */
-    /* border-radius: 4px; */
-    background-color: #2f82ff;
-    cursor: pointer;
-    width: 90px;
-    height: 100%;
-    padding: 6px;
-}
-.btn:hover {
-    color: #ffffff;
-    background-color: #084390;
+
+.button {
+    background-color: #007bff;
+    color: white;
+    padding: 12px 20px;
     border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 18px;
+    font-weight: bold;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    transition: background-color 0.3s, transform 0.3s;
+    width: 100%;
+    text-align: center;
+}
+
+.button:hover {
+    background-color: #0056b3;
+    transform: translateY(-2px);
+}
+
+.button:disabled {
+    background-color: #6c757d;
+    cursor: not-allowed;
 }
